feat: support deserialize packer (but only CB4)